# SPQR

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
examples/: enamine_1B_clustering.ipynb  tutorial.ipynb
models/: kmeans_cluster_1000000000S_100000k.joblib  kmeans_cluster_2000000000S_100000k.joblib  kmeans_fit_400000000_120000.joblib  kmeans_fit_800M_120k.joblib  pqk_trained_encoder_6_256_45M_MQN.joblib
scripts/: calculate_fingerprints.py  fit_pqkmeans.py  generate_pqcodes.py  get_training_data.py  test_save_speed.py
spiq/: __init__.py
spiq/clustering/: PyQKmeans.py
spiq/encoder/: encoder.py  encoder_base.py
spiq/streamer/: data_streamer.py
spiq/utils/: __init__.py  fingerprints.py  helper_functions.py  visualization.py
tests/: test_data_streamer.py  test_encoder.py  test_fingerprints.py  test_utils.py
